--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -891,7 +891,7 @@ section {
 
 .contact .info {
   padding: 30px;
-  background: #50577A;
+  background: #2d2f46;
   width: 100%;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
   border-radius: 20px;
@@ -959,7 +959,7 @@ section {
 .contact .php-email-form {
   width: 100%;
   padding: 30px;
-  background: #50577A;
+  background: none;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
   border-radius: 20px;
 }
@@ -970,7 +970,6 @@ section {
 
 .contact .php-email-form .validate {
   display: none;
-  color: blue;
   margin: 0 0 15px 0;
   font-weight: 400;
   font-size: 13px;
@@ -979,7 +978,6 @@ section {
 .contact .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #0ded27;
   text-align: left;
   padding: 15px;
   font-weight: 600;
